--- a/index.html
+++ b/index.html
@@ -5,16 +5,93 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   </head>
+
   <body>
-    <div id="pic">
-      BIG FANCY PIC
-    </div>
-    <div id="icons">
-      <!-- TODO: spans for icons -->
+    
+      <div id="pic">
+      <img src="http://placekitten.com/500/150" alt="Big Cat Pic">
+      <div id="icons">
+        <!-- TODO: spans for icons -->
+        <span><i class="fas fa-camera"></i></span>
+        <span><i class="fas fa-anchor"></i></span>
+        <span><i class="fas fa-bacon"></i></span>
+        <span><i class="fas fa-motorcycle"></i></span>
+        <span><i class="fas fa-chess-knight"></i></span>
+        <span><i class="fas fa-pie"></i></span>
+
     </div>
     <div id="mini-layout">
-      <!-- TODO: Spans for 4 item wide mini-layout -->
     </div>
+    
+  
+    <span>
+    <div id="pic">
+     <img src="https://place-puppy.com/100x100" alt=" Picture of Dog">
+
+    </div>
+    <div>
+      <strong>Silly Dog</strong>
+
+    </div>
+    <div>
+      <p>A dog climbing</p>
+    </div>
+    <div>
+      <a href="http://place-puppy.com">More Dogs </a>
+    </div>
+    </span>
+    <span>
+   <div id="pic">
+    <img src="https://placekitten.com/100/100"  alt="Big Cat Pic">
+   </div>
+   <div>
+<strong>Cute Kitty</strong>
+
+   </div>
+   <div>
+    <p> So photogentic </p>
+   </div>
+   <div>
+    <a href="http://placekitten.com"> More Kittens </a>
+   </div>
+    </span>
+    <span>
+      <div>
+        <img src="https://placebear.com/100/100" alt="Bear Pic">
+      </div>
+      <div>
+        <strong>Fluffy Bear</strong>
+      </div>
+      <div>
+        <p>Aww a bear!</p>
+      </div>
+      <div>
+        <a href="https://placebear.com/">More Bears</a>
+      </div>
+    </span>
+    <span>
+      <div>
+        <img id="Penguin" src="https://i.natgeofe.com/n/30652a2b-56fc-4c89-8ba7-8e011336a20a/penguins_04_4x3.jpg" alt="Penguin Pic">
+      </div>
+      <div>
+        <strong>Crazy Penguin</strong>
+      </div>
+      <div>
+        <p>Who You Looking At?!</p>
+      </div>
+      <div>
+        <a href="https://seaworld.org/animals/facts/birds/penguins/">More Penguins</a>
+      </div>
+    </span>
+  
   </body>
 </html>
+
+
+
+
+
+
